Final cleanup: Update remaining old URLs and remove Python cache files

--- a/.env.example
+++ b/.env.example
@@ -52,10 +52,10 @@ HEALTH_CHECK_INTERVAL=30
 HEALTH_CHECK_TIMEOUT=10
 
 # Production Information (Reference Only)
-# PRODUCTION_GATEWAY=https://bhiv-hr-gateway-46pz.onrender.com
-# PRODUCTION_AGENT=https://bhiv-hr-agent-m1me.onrender.com (OFFLINE)
-# PRODUCTION_HR_PORTAL=https://bhiv-hr-portal-cead.onrender.com
-# PRODUCTION_CLIENT_PORTAL=https://bhiv-hr-client-portal-5g33.onrender.com
+# PRODUCTION_GATEWAY=https://bhiv-hr-gateway-ltg0.onrender.com
+# PRODUCTION_AGENT=https://bhiv-hr-agent-nhgg.onrender.com
+# PRODUCTION_HR_PORTAL=https://bhiv-hr-portal-u670.onrender.com
+# PRODUCTION_CLIENT_PORTAL=https://bhiv-hr-client-portal-3iod.onrender.com
 # PRODUCTION_CANDIDATE_PORTAL=https://bhiv-hr-candidate-portal.onrender.com
 # PRODUCTION_API_KEY=prod_api_key_XUqM2msdCa4CYIaRywRNXRVc477nlI3AQ-lr6cgTB2o
 # CLIENT_DEMO_LOGIN=TECH001/demo123
