--- a/deployment/docker/docker-compose.production.yml
+++ b/deployment/docker/docker-compose.production.yml
@@ -48,6 +48,7 @@ services:
       AGENT_SERVICE_URL: http://agent:9000
       CANDIDATE_JWT_SECRET: ${CANDIDATE_JWT_SECRET:-<YOUR_CANDIDATE_JWT_SECRET>}
     volumes:
+      - ../../services/gateway:/app:ro  # Live code sync (read-only)
       - ../../services/gateway/logs:/app/logs
     depends_on:
       db:
@@ -72,6 +73,8 @@ services:
       API_KEY_SECRET: ${API_KEY_SECRET:-<YOUR_API_KEY>}
       JWT_SECRET: ${JWT_SECRET:-<YOUR_JWT_SECRET>}
       CANDIDATE_JWT_SECRET: ${CANDIDATE_JWT_SECRET:-<YOUR_CANDIDATE_JWT_SECRET>}
+    volumes:
+      - ../../services/agent:/app:ro  # Live code sync
     depends_on:
       db:
         condition: service_healthy
@@ -92,8 +95,12 @@ services:
       - "8501:8501"
     environment:
       GATEWAY_URL: http://gateway:8000
+      AGENT_SERVICE_URL: http://agent:9000
       API_KEY_SECRET: ${API_KEY_SECRET:-<YOUR_API_KEY>}
-      JWT_SECRET: ${JWT_SECRET:-<YOUR_JWT_SECRET>}
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY:-<YOUR_JWT_SECRET>}
+      CANDIDATE_JWT_SECRET: ${CANDIDATE_JWT_SECRET:-<YOUR_CANDIDATE_JWT_SECRET>}
+    volumes:
+      - ../../services/portal:/app:ro  # Live code sync
     depends_on:
       gateway:
         condition: service_healthy
@@ -119,9 +126,12 @@ services:
       - "8502:8502"
     environment:
       GATEWAY_URL: http://gateway:8000
+      AGENT_SERVICE_URL: http://agent:9000
       API_KEY_SECRET: ${API_KEY_SECRET:-<YOUR_API_KEY>}
-      JWT_SECRET: ${JWT_SECRET:-<YOUR_JWT_SECRET>}
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY:-<YOUR_JWT_SECRET>}
       DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-bhiv_local_password_2025}@db:5432/bhiv_hr
+    volumes:
+      - ../../services/client_portal:/app:ro  # Live code sync
     depends_on:
       gateway:
         condition: service_healthy
@@ -147,9 +157,12 @@ services:
       - "8503:8503"
     environment:
       GATEWAY_URL: http://gateway:8000
-      API_KEY_SECRET: ${API_KEY_SECRET:-<YOUR_API_KEY>}
+      API_KEY: ${API_KEY_SECRET:-<YOUR_API_KEY>}
+      JWT_SECRET: ${CANDIDATE_JWT_SECRET:-<YOUR_CANDIDATE_JWT_SECRET>}
       CANDIDATE_JWT_SECRET: ${CANDIDATE_JWT_SECRET:-<YOUR_CANDIDATE_JWT_SECRET>}
       DATABASE_URL: postgresql://bhiv_user:${DB_PASSWORD:-bhiv_local_password_2025}@db:5432/bhiv_hr
+    volumes:
+      - ../../services/candidate_portal:/app:ro  # Live code sync
     depends_on:
       gateway:
         condition: service_healthy
