🚀 Add LangGraph Service Integration

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,8 @@ DEFAULT_CLIENT_PASSWORD=your_default_client_password
 # Service URLs (standardized naming)
 GATEWAY_SERVICE_URL=http://gateway:8000
 AGENT_SERVICE_URL=http://agent:9000
+LANGGRAPH_URL=http://langgraph:9001
+LANGGRAPH_PRODUCTION_URL=https://bhiv-langgraph.onrender.com
 PORTAL_SERVICE_URL=http://localhost:8501
 CLIENT_PORTAL_SERVICE_URL=http://localhost:8502
 CANDIDATE_PORTAL_SERVICE_URL=http://localhost:8503
