--- a/services/langgraph/.env.example
+++ b/services/langgraph/.env.example
@@ -8,6 +8,9 @@ LANGGRAPH_PORT=9001
 # Database
 DATABASE_URL=postgresql://bhiv_user:bhiv_local_password_2025@localhost:5432/bhiv_hr
 
+# JWT Secret
+JWT_SECRET_KEY=<YOUR_JWT_SECRET_KEY>
+
 # OpenAI Configuration (Optional)
 OPENAI_API_KEY=your-openai-api-key
 OPENAI_MODEL=gpt-4-turbo-preview
