--- a/services/langgraph/Dockerfile
+++ b/services/langgraph/Dockerfile
@@ -18,8 +18,8 @@ COPY . .
 
 EXPOSE 9001
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import httpx; httpx.get('http://localhost:9001/health', timeout=5)" || exit 1
+# Health check (will be disabled on Render as it uses dynamic ports)
+# HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+#     CMD python -c "import httpx; httpx.get('http://localhost:9001/health', timeout=5)" || exit 1
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "9001"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "$PORT", "--timeout-keep-alive", "30"]
