--- a/.env.example
+++ b/.env.example
@@ -17,17 +17,26 @@ POSTGRES_DB=bhiv_hr
 # API Security
 API_KEY_SECRET=your_secure_api_key_here
 JWT_SECRET_KEY=your_jwt_secret_here
+CANDIDATE_JWT_SECRET_KEY=your_candidate_jwt_secret_here
+GATEWAY_SECRET_KEY=your_gateway_secret_key_here
 CLIENT_ACCESS_CODE=your_client_access_code
 DEFAULT_CLIENT_PASSWORD=your_default_client_password
 
-# Service URLs (standardized naming)
+# Service URLs (Local Docker)
 GATEWAY_SERVICE_URL=http://gateway:8000
 AGENT_SERVICE_URL=http://agent:9000
-LANGGRAPH_URL=http://langgraph:9001
-LANGGRAPH_PRODUCTION_URL=https://bhiv-langgraph.onrender.com
-PORTAL_SERVICE_URL=http://localhost:8501
-CLIENT_PORTAL_SERVICE_URL=http://localhost:8502
-CANDIDATE_PORTAL_SERVICE_URL=http://localhost:8503
+LANGGRAPH_SERVICE_URL=http://langgraph:9001
+PORTAL_SERVICE_URL=http://portal:8501
+CLIENT_PORTAL_SERVICE_URL=http://client_portal:8502
+CANDIDATE_PORTAL_SERVICE_URL=http://candidate_portal:8503
+
+# Production URLs (Reference)
+# GATEWAY_SERVICE_URL=https://bhiv-hr-gateway-ltg0.onrender.com
+# AGENT_SERVICE_URL=https://bhiv-hr-agent-nhgg.onrender.com
+# LANGGRAPH_SERVICE_URL=https://bhiv-hr-langgraph.onrender.com
+# PORTAL_SERVICE_URL=https://bhiv-hr-portal-u670.onrender.com
+# CLIENT_PORTAL_SERVICE_URL=https://bhiv-hr-client-portal-3iod.onrender.com
+# CANDIDATE_PORTAL_SERVICE_URL=https://bhiv-hr-candidate-portal-abe6.onrender.com
 
 # CORS Configuration
 CORS_ORIGINS=http://localhost:8501,http://localhost:8502,http://localhost:3000
@@ -53,12 +62,16 @@ LOG_FORMAT=json
 HEALTH_CHECK_INTERVAL=30
 HEALTH_CHECK_TIMEOUT=10
 
-# Production Information (Reference Only)
-# PRODUCTION_GATEWAY=https://bhiv-hr-gateway-ltg0.onrender.com
-# PRODUCTION_AGENT=https://bhiv-hr-agent-nhgg.onrender.com
-# PRODUCTION_HR_PORTAL=https://bhiv-hr-portal-u670.onrender.com
-# PRODUCTION_CLIENT_PORTAL=https://bhiv-hr-client-portal-3iod.onrender.com
-# PRODUCTION_CANDIDATE_PORTAL=https://bhiv-hr-candidate-portal.onrender.com
-# PRODUCTION_API_KEY=prod_api_key_XUqM2msdCa4CYIaRywRNXRVc477nlI3AQ-lr6cgTB2o
-# CLIENT_DEMO_LOGIN=TECH001/demo123
-# TOTAL_ENDPOINTS=61 (55 Gateway + 6 Agent) - All verified accurate
+# Environment Configuration
+ENVIRONMENT=development
+
+# LangGraph Communication Services (Template)
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN_SECRET_KEY=your_twilio_auth_token
+TWILIO_WHATSAPP_NUMBER=your_whatsapp_number
+GMAIL_EMAIL=your_gmail_email
+GMAIL_APP_PASSWORD_SECRET_KEY=your_gmail_app_password
+TELEGRAM_BOT_TOKEN_SECRET_KEY=your_telegram_bot_token
+TELEGRAM_BOT_USERNAME=your_telegram_bot_username
+OPENAI_API_SECRET_KEY=your_openai_api_key
+OPENAI_MODEL=gpt-4-turbo-preview
