--- a/deployment/docker/docker-compose.production.yml
+++ b/deployment/docker/docker-compose.production.yml
@@ -185,11 +185,11 @@ services:
       JWT_SECRET_KEY: ${JWT_SECRET_KEY:-<YOUR_JWT_SECRET>}
       CANDIDATE_JWT_SECRET_KEY: ${CANDIDATE_JWT_SECRET_KEY:-<YOUR_CANDIDATE_JWT_SECRET>}
       TWILIO_ACCOUNT_SID: ${TWILIO_ACCOUNT_SID:-test_account_sid}
-      TWILIO_AUTH_TOKEN_SECRET_KEY: ${TWILIO_AUTH_TOKEN_SECRET_KEY:-test_auth_token}
+      TWILIO_AUTH_TOKEN: ${TWILIO_AUTH_TOKEN:-test_auth_token}
       TWILIO_WHATSAPP_NUMBER: ${TWILIO_WHATSAPP_NUMBER:-+15005550006}
       GMAIL_EMAIL: ${GMAIL_EMAIL:-test@gmail.com}
-      GMAIL_APP_PASSWORD_SECRET_KEY: ${GMAIL_APP_PASSWORD_SECRET_KEY:-test_password}
-      TELEGRAM_BOT_TOKEN_SECRET_KEY: ${TELEGRAM_BOT_TOKEN_SECRET_KEY:-test_bot_token}
+      GMAIL_APP_PASSWORD: ${GMAIL_APP_PASSWORD:-test_password}
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-test_bot_token}
       TELEGRAM_BOT_USERNAME: ${TELEGRAM_BOT_USERNAME:-@test_bot}
       OPENAI_API_SECRET_KEY: ${OPENAI_API_SECRET_KEY:-your-openai-api-key}
       OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4-turbo-preview}
@@ -205,7 +205,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-    # Production URL: bhiv-langgraph.onrender.com (🔄 To be deployed)
 
 volumes:
   postgres_data:
