--- a/deployment/docker/docker-compose.production.yml
+++ b/deployment/docker/docker-compose.production.yml
@@ -191,7 +191,7 @@ services:
       GMAIL_APP_PASSWORD: ${GMAIL_APP_PASSWORD:-test_password}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-test_bot_token}
       TELEGRAM_BOT_USERNAME: ${TELEGRAM_BOT_USERNAME:-@test_bot}
-      OPENAI_API_SECRET_KEY: ${OPENAI_API_SECRET_KEY:-your-openai-api-key}
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-your-openai-api-key}
       OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4-turbo-preview}
       ENVIRONMENT: development
       LOG_LEVEL: INFO
