--- a/deployment/docker/docker-compose.production.yml
+++ b/deployment/docker/docker-compose.production.yml
@@ -191,9 +191,9 @@ services:
       GMAIL_APP_PASSWORD: ${GMAIL_APP_PASSWORD:-test_password}
       TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:-test_bot_token}
       TELEGRAM_BOT_USERNAME: ${TELEGRAM_BOT_USERNAME:-@test_bot}
-      OPENAI_API_KEY: ${OPENAI_API_KEY:-your-openai-api-key}
-      OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4-turbo-preview}
-      ENVIRONMENT: development
+      GEMINI_API_KEY: ${GEMINI_API_KEY:-your-gemini-api-key}
+      GEMINI_MODEL: ${GEMINI_MODEL:-gemini-pro}
+      ENVIRONMENT: production
       LOG_LEVEL: INFO
     depends_on:
       db:
