--- a/services/langgraph/requirements.txt
+++ b/services/langgraph/requirements.txt
@@ -2,7 +2,7 @@
 langgraph>=0.2.0
 langgraph-checkpoint-postgres>=1.0.0
 langchain>=0.2.0
-langchain-openai>=0.1.8
+langchain-google-genai>=1.0.0
 langchain-core>=0.2.0
 
 # API & Web
@@ -15,7 +15,7 @@ twilio>=8.0.0
 python-telegram-bot>=20.0
 
 # AI/ML
-openai>=1.0.0
+google-generativeai>=0.3.0
 transformers>=4.30.0
 torch>=2.0.0
 
