fix: Add LANGGRAPH_SERVICE_URL to portal service environment

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -104,6 +104,7 @@ services:
     environment:
       GATEWAY_SERVICE_URL: ${GATEWAY_SERVICE_URL}
       AGENT_SERVICE_URL: ${AGENT_SERVICE_URL}
+      LANGGRAPH_SERVICE_URL: ${LANGGRAPH_SERVICE_URL}
       API_KEY_SECRET: ${API_KEY_SECRET}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       CANDIDATE_JWT_SECRET_KEY: ${CANDIDATE_JWT_SECRET_KEY}
