--- a/services/langgraph/requirements.txt
+++ b/services/langgraph/requirements.txt
@@ -18,6 +18,9 @@ python-telegram-bot>=20.0
 google-generativeai>=0.3.0
 transformers>=4.30.0
 torch>=2.0.0
+scikit-learn>=1.3.0
+numpy>=1.24.0
+psutil>=5.9.0
 
 # Database
 psycopg2-binary>=2.9.0
