--- a/.env.example
+++ b/.env.example
@@ -1,77 +1,182 @@
-# BHIV HR Platform - Environment Configuration Template
-# Version: 3.1.0 with Phase 3 Features
-# Updated: October 13, 2025
-# Status: Production Ready
-#
-# Copy this file to .env and update values for your deployment
-# Production Status: 5/5 services operational on Render
-# Database Schema: v4.1.0 with Phase 3 learning engine
+# ============================================
+# BHIV HR PLATFORM - Environment Variables
+# ============================================
+# Version: 4.3.0
+# Last Updated: December 9, 2025
+# 
+# INSTRUCTIONS:
+# 1. Copy this file to .env
+# 2. Replace all <PLACEHOLDER> values with actual credentials
+# 3. NEVER commit .env to Git
+# ============================================
 
-# Database Configuration
-DATABASE_URL=postgresql://bhiv_user:your_password@db:5432/bhiv_hr
-DB_PASSWORD=your_secure_password
-POSTGRES_PASSWORD=your_secure_password
+# ============================================
+# DATABASE CONFIGURATION (REQUIRED)
+# ============================================
+DATABASE_URL=postgresql://bhiv_user:<PASSWORD>@localhost:5432/bhiv_hr
 POSTGRES_USER=bhiv_user
+POSTGRES_PASSWORD=<YOUR_SECURE_PASSWORD>
 POSTGRES_DB=bhiv_hr
 
-# API Security
-API_KEY_SECRET=your_secure_api_key_here
-JWT_SECRET_KEY=your_jwt_secret_here
-CANDIDATE_JWT_SECRET_KEY=your_candidate_jwt_secret_here
-GATEWAY_SECRET_KEY=your_gateway_secret_key_here
-CLIENT_ACCESS_CODE=your_client_access_code
-DEFAULT_CLIENT_PASSWORD=your_default_client_password
+# ============================================
+# AUTHENTICATION SECRETS (REQUIRED)
+# ============================================
+# Generate with: openssl rand -hex 32
+API_KEY_SECRET=<YOUR_API_KEY_SECRET_32_CHARS>
+JWT_SECRET_KEY=<YOUR_JWT_SECRET_32_CHARS>
+CANDIDATE_JWT_SECRET_KEY=<YOUR_CANDIDATE_JWT_SECRET_32_CHARS>
 
-# Service URLs (Local Docker)
-GATEWAY_SERVICE_URL=http://gateway:8000
-AGENT_SERVICE_URL=http://agent:9000
-LANGGRAPH_SERVICE_URL=http://langgraph:9001
-PORTAL_SERVICE_URL=http://portal:8501
-CLIENT_PORTAL_SERVICE_URL=http://client_portal:8502
-CANDIDATE_PORTAL_SERVICE_URL=http://candidate_portal:8503
+# ============================================
+# SERVICE URLS - LOCAL DEVELOPMENT
+# ============================================
+GATEWAY_SERVICE_URL=http://localhost:8000
+AGENT_SERVICE_URL=http://localhost:9000
+LANGGRAPH_SERVICE_URL=http://localhost:9001
 
-# Production URLs (Reference)
+# ============================================
+# SERVICE URLS - PRODUCTION (RENDER)
+# ============================================
 # GATEWAY_SERVICE_URL=https://bhiv-hr-gateway-ltg0.onrender.com
 # AGENT_SERVICE_URL=https://bhiv-hr-agent-nhgg.onrender.com
 # LANGGRAPH_SERVICE_URL=https://bhiv-hr-langgraph.onrender.com
-# PORTAL_SERVICE_URL=https://bhiv-hr-portal-u670.onrender.com
-# CLIENT_PORTAL_SERVICE_URL=https://bhiv-hr-client-portal-3iod.onrender.com
-# CANDIDATE_PORTAL_SERVICE_URL=https://bhiv-hr-candidate-portal-abe6.onrender.com
 
-# CORS Configuration
-CORS_ORIGINS=http://localhost:8501,http://localhost:8502,http://localhost:3000
+# ============================================
+# AI/ML SERVICES (OPTIONAL)
+# ============================================
+# Google Gemini API (for advanced AI features)
+GEMINI_API_KEY=<YOUR_GEMINI_API_KEY>
 
-# Feature Flags (Phase 3)
-ENABLE_SEMANTIC=true
-ENABLE_AUTO_SYNC=true
-ENABLE_VALUES_ASSESSMENT=true
-ENABLE_LEARNING_ENGINE=true
-ENABLE_CULTURAL_FIT=true
-ENABLE_BATCH_PROCESSING=true
+# OpenAI API (alternative AI provider)
+OPENAI_API_KEY=<YOUR_OPENAI_API_KEY>
 
-# Performance Settings
-MAX_CANDIDATES_PER_REQUEST=50
-AI_MATCHING_TIMEOUT=15
-DATABASE_POOL_SIZE=10
+# ============================================
+# COMMUNICATION SERVICES (OPTIONAL)
+# ============================================
+# Gmail SMTP for Email Notifications
+GMAIL_EMAIL=<YOUR_GMAIL_ADDRESS>
+GMAIL_APP_PASSWORD=<YOUR_GMAIL_APP_PASSWORD>
 
-# Logging
-LOG_LEVEL=INFO
-LOG_FORMAT=json
-
-# Health Check Settings
-HEALTH_CHECK_INTERVAL=30
-HEALTH_CHECK_TIMEOUT=10
-
-# Environment Configuration
-ENVIRONMENT=development
-
-# LangGraph Communication Services (Template)
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
+# Twilio for WhatsApp/SMS Notifications
+TWILIO_ACCOUNT_SID=<YOUR_TWILIO_ACCOUNT_SID>
+TWILIO_AUTH_TOKEN=<YOUR_TWILIO_AUTH_TOKEN>
 TWILIO_WHATSAPP_NUMBER=+14155238886
-GMAIL_EMAIL=your_gmail_email
-GMAIL_APP_PASSWORD=your_gmail_app_password
-TELEGRAM_BOT_TOKEN=8260513283:AAFoYOeQKEcYdoFOtBTi7ZgsuPt_YNlgvCo
+TWILIO_PHONE_NUMBER=<YOUR_TWILIO_PHONE_NUMBER>
+
+# Telegram Bot for Telegram Notifications
 TELEGRAM_BOT_USERNAME=BHIV_HR_PLATFORM_ASSISTANT_bot
-GEMINI_API_KEY=your_gemini_api_key_here
-GEMINI_MODEL=gemini-pro
+TELEGRAM_BOT_TOKEN=<YOUR_TELEGRAM_BOT_TOKEN>
+
+# ============================================
+# SYSTEM CONFIGURATION
+# ============================================
+ENVIRONMENT=development
+# Options: development, staging, production
+
+LOG_LEVEL=INFO
+# Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
+
+PYTHON_VERSION=3.12.7
+
+# ============================================
+# SERVICE PORTS (LOCAL DEVELOPMENT)
+# ============================================
+GATEWAY_PORT=8000
+AGENT_PORT=9000
+LANGGRAPH_PORT=9001
+PORTAL_PORT=8501
+CLIENT_PORTAL_PORT=8502
+CANDIDATE_PORTAL_PORT=8503
+DATABASE_PORT=5432
+
+# ============================================
+# RATE LIMITING CONFIGURATION
+# ============================================
+RATE_LIMIT_DEFAULT=60
+RATE_LIMIT_PREMIUM=300
+RATE_LIMIT_ENTERPRISE=500
+
+# ============================================
+# SECURITY CONFIGURATION
+# ============================================
+# Account lockout after failed login attempts
+MAX_LOGIN_ATTEMPTS=5
+LOCKOUT_DURATION_MINUTES=30
+
+# JWT token expiration (in hours)
+JWT_EXPIRATION_HOURS=24
+
+# Password policy
+MIN_PASSWORD_LENGTH=8
+REQUIRE_PASSWORD_COMPLEXITY=true
+
+# ============================================
+# AI MATCHING CONFIGURATION
+# ============================================
+# Phase 3 Semantic Engine
+SEMANTIC_MODEL_PATH=/models/sentence-transformer
+MATCHING_BATCH_SIZE=50
+MATCHING_TIMEOUT_SECONDS=60
+
+# ============================================
+# WORKFLOW CONFIGURATION
+# ============================================
+WORKFLOW_TIMEOUT_SECONDS=120
+WORKFLOW_RETRY_ATTEMPTS=3
+
+# ============================================
+# MONITORING & METRICS
+# ============================================
+ENABLE_METRICS=true
+METRICS_PORT=9090
+
+# ============================================
+# CORS CONFIGURATION
+# ============================================
+CORS_ORIGINS=http://localhost:3000,http://localhost:8501,http://localhost:8502,http://localhost:8503
+
+# ============================================
+# RENDER DEPLOYMENT (PRODUCTION ONLY)
+# ============================================
+# These are set automatically by Render
+# RENDER_EXTERNAL_URL=<auto-set-by-render>
+# RENDER_INTERNAL_HOSTNAME=<auto-set-by-render>
+# RENDER_SERVICE_NAME=<auto-set-by-render>
+
+# ============================================
+# BACKUP & RECOVERY
+# ============================================
+BACKUP_ENABLED=true
+BACKUP_SCHEDULE=0 2 * * *
+# Cron format: Daily at 2 AM
+
+BACKUP_RETENTION_DAYS=7
+
+# ============================================
+# FEATURE FLAGS
+# ============================================
+ENABLE_2FA=true
+ENABLE_RL_FEEDBACK=true
+ENABLE_NOTIFICATIONS=true
+ENABLE_WORKFLOWS=true
+
+# ============================================
+# DEMO CREDENTIALS (DEVELOPMENT ONLY)
+# ============================================
+DEMO_CLIENT_ID=TECH001
+DEMO_CLIENT_PASSWORD=demo123
+DEMO_USER_USERNAME=demo_user
+DEMO_USER_PASSWORD=demo_password
+
+# ============================================
+# NOTES
+# ============================================
+# 1. REQUIRED variables must be set for system to function
+# 2. OPTIONAL variables enable additional features
+# 3. Generate secure secrets: openssl rand -hex 32
+# 4. Gmail App Password: https://support.google.com/accounts/answer/185833
+# 5. Twilio Credentials: https://console.twilio.com
+# 6. Telegram Bot Token: https://t.me/BotFather
+# 7. Gemini API Key: https://makersuite.google.com/app/apikey
+# 8. Never commit .env file to version control
+# 9. Use different secrets for development/staging/production
+# 10. Rotate secrets every 90 days for security
