🔧 Fix authentication issues and secure credentials

--- a/.env.example
+++ b/.env.example
@@ -48,16 +48,16 @@ OPENAI_API_KEY=<YOUR_OPENAI_API_KEY>
 # ============================================
 # Gmail SMTP for Email Notifications
 GMAIL_EMAIL=<YOUR_GMAIL_EMAIL>
-GMAIL_APP_PASSWORD_SECRET_KEY=<YOUR_GMAIL_APP_PASSWORD>
+GMAIL_APP_PASSWORD=<YOUR_GMAIL_APP_PASSWORD>
 
 # Twilio for WhatsApp/SMS Notifications
 TWILIO_ACCOUNT_SID=<YOUR_TWILIO_ACCOUNT_SID>
-TWILIO_AUTH_TOKEN_SECRET_KEY=<YOUR_TWILIO_AUTH_TOKEN>
+TWILIO_AUTH_TOKEN=<YOUR_TWILIO_AUTH_TOKEN>
 TWILIO_WHATSAPP_NUMBER=<YOUR_WHATSAPP_NUMBER>
 
 # Telegram Bot for Telegram Notifications
 TELEGRAM_BOT_USERNAME=<YOUR_TELEGRAM_BOT_USERNAME>
-TELEGRAM_BOT_TOKEN_SECRET_KEY=<YOUR_TELEGRAM_BOT_TOKEN>
+TELEGRAM_BOT_TOKEN=<YOUR_TELEGRAM_BOT_TOKEN>
 
 # ============================================
 # SYSTEM CONFIGURATION
