--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -196,6 +196,7 @@ services:
       API_KEY_SECRET: ${API_KEY_SECRET}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       CANDIDATE_JWT_SECRET_KEY: ${CANDIDATE_JWT_SECRET_KEY}
+      GATEWAY_SECRET_KEY: ${GATEWAY_SECRET_KEY}
       GATEWAY_SERVICE_URL: ${GATEWAY_SERVICE_URL}
       TWILIO_ACCOUNT_SID: ${TWILIO_ACCOUNT_SID}
       TWILIO_AUTH_TOKEN: ${TWILIO_AUTH_TOKEN}
